Adicionando a parte dos autores
